--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "body-parser": "^1.18.2",
     "compression": "^1.7.1",
+    "cors": "^2.8.4",
     "express": "^4.16.2",
     "helmet": "^3.10.0",
     "morgan": "^1.9.0",
@@ -27,6 +28,7 @@
     "@types/express": "^4.11.1",
     "@types/helmet": "0.0.37",
     "@types/morgan": "^1.7.35",
-    "@types/sequelize": "^4.27.4"
+    "@types/sequelize": "^4.27.4",
+    "@types/cors": "^2.8.3"
   }
 }
